--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -195,7 +195,7 @@ py-5">
         </div>
         <div class="button_size">
           <button class="button_class"
-          (click)="onClickValue('.','function')">.
+          (click)="onClickValue('.','number')">.
 
           </button>
 
