--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -194,8 +194,8 @@ py-5">
 
         </div>
         <div class="button_size">
-          <button class="button_class"></button>
-          (click)="onClickValue('.','function')>.
+          <button class="button_class"
+          (click)="onClickValue('.','function')">.
 
           </button>
 
