--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -181,7 +181,7 @@ py-5">
        <div class="flex w-full">
         <div class="button_size">
           <button class="button_class"
-          (click)="onClickValue('-','function')">+/-
+          (click)="onClickValue('+/-','function')">+/-
 
           </button>
 
@@ -195,7 +195,7 @@ py-5">
         </div>
         <div class="button_size">
           <button class="button_class"
-          (click)="onClickValue('.','function')">.
+          (click)="onClickValue('.','number')">.
 
           </button>
 
